# privacy-finance-app

./: .gitignore  BUILD_AND_RELEASE.md  CONTINUOUS_BUILDS.md  CROSS_PLATFORM_BUILDS.md  DEVELOPMENT.md  FEATURES.md  PROJECT_FILES.txt  QUICKSTART.md  QUICK_START_BUILDS.md  README.md  WORKFLOW_TROUBLESHOOTING.md  ideas.md  package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: build.yml
client/: index.html
client/src/: App.tsx  index.css
client/src/components/: Layout.tsx
client/src/contexts/: AppContext.tsx  FinanceContext.tsx
client/src/hooks/: useAutopayExecution.ts
client/src/lib/: db.ts  scheduler.ts  storage.ts  types.ts  utils.ts
client/src/pages/: Accounts.tsx  AutoPay.tsx  Budgets.tsx  Dashboard.tsx  RecurringPayments.tsx  Settings.tsx  Templates.tsx  Transactions.tsx
electron/: main.ts  preload.ts
rust_native/: Cargo.toml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
