[package]
name = "personal-finance-tracker"
version = "0.1.0"
description = "Privacy-focused personal finance tracker with offline support"
authors = ["Your Name"]
license = "MIT"
repository = "https://github.com/yourusername/personal-finance-tracker"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "personal_finance_tracker_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.10.3", features = [] }
tauri-plugin-shell = "2.2.0"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
